# prism

./: .gitignore  AGENTS.md  ALS_PLAN.md  ARCHITECTURE.md  BRANCH_DEPLOYMENT.md  CHANGELOG.md  CLI_CHEATSHEET.md  DEPLOYMENT.md  DEPLOYMENT_TROUBLESHOOTING.md  DEVELOPMENT_LOG.md  DUCKDB_CHEATSHEET.md  GITHUB_PAGES_FIX.md  MCP_GUIDE.md  MCP_SETUP.md  PRODUCTION_DEPLOYMENT.md  PROJECT_PLAN.md  PROJECT_STRUCTURE.md  Phase1_Complete.md  Phase1_Summary.md  README.md  RESTRUCTURE_SUMMARY.md  TROUBLESHOOTING.md  WORKING_LOG.md  demo.html  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.html  test_features.py  test_mcp_tools.py  uv  vite.config.ts
.github/workflows/: deploy.yml
archive/: README.md  WORKING_LOG.md  app.ts  index.html  package.json  tsconfig.json  vite.config.ts
assets/: FileSaver.min-BekvCsHI.js  index-9dcZ2Bbt.css  index-BUgpSXgI.js  index-BYSmC2TB.css  index-BZJSI3n_.js  index-CBROrPut.css  index-CMth6paY.css  index-CTyb2_MD.js  index-CyIyQhp7.js  index-DBq-fu8j.js  index-DH3Ha3-4.js  index-DVYKdJcv.js  index-DnsNVH63.js  index-Dp7l0DYL.css  index-DyLiyZpA.css  index-N0iBd5Sg.js  index-h2jwDhkx.js  jszip.min-CEUpOHlH.js  jszip.min-KAUKf24L.js
docs/: AZ-GC012F-IIM & SSC_1st_data sharing tlf shell_v0.3_20251229.docx  DATABASE_SCHEMA.md  DESIGN_DOCUMENT.md  META_SCHEMA.md  PHASE1_RAW_LAYER_PLAN.md  PROJECT_PLAN.md  Phase1_Gap_Analysis.md  Raw to TLF spec 1 (1).xlsx  architecture.md  centralized_mapping_spec_for_data_sharing.xlsx
examples/: mock_derivations.json  mock_outputs.json
examples/some_study/: AZ-GC012F-IIM & SSC_1st_data sharing tlf shell_v0.5_20260211_draft.docx  D8318N00001_ALS.xlsx  Raw to TLF spec 1 (1).xlsx  classification_report.json  create_raw_layer.sql  meta_3_deliverables.xlsx  meta_3_deliverables_optimized.xlsx  meta_generated_backup.xlsx  meta_with_derivations_test.xlsx  mock_extracted.json  spec_final.xlsx  spec_final_v2.xlsx  spec_full.xlsx  spec_test.xlsx  spec_v4.xlsx
public/: 404.html
public/templates/: tlf_dev_template_code.sas  tlf_val_template_code.sas
scripts/: run_mvp_pipeline.py
server/: .env  package-lock.json  package.json  server.js
sql/: init_gold.sql  init_metadata.sql  init_traceability.sql
src/: App.vue  main.ts  router.ts  vite-env.d.ts
src/assets/: ios-style.css  main.css
src/components/: FileConflictDialog.vue  SASCodeEditor.vue  ServerConnectionDialog.vue  ServerFileBrowser.vue  TemplateManager.vue  (+1 more)
templates/: adam production template.sas  adam validation template.sas  sdtm production template.sas  sdtm validation template.sas
tests/: test_als_parser.py  test_gold_engine.py  test_phase1.py  test_phase1_3.py  test_phase1_4.py  test_silver_generator.py
(+177 files in other folders)
