[project]
name = "prism-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=23.0.0",
    "duckdb>=0.10.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0",
    "requests>=2.32.5",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.65.0",
    "xlrd>=2.0.0",
]
